--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-REACT_APP_REST_API_URL = http://localhost:3443/api/
+
 REACT_APP_GOOGLE_MAPS_API_KEY = "AIzaSyBvUo2KP3X2485DGbt9-HKa20dHH9Q_GVg"
 REACT_APP_GOOGLE_MAPS_MAP_ID = "746d32ce9f171c35"
-REACT_APP_WEBSOCKET_URL = ws://localhost:3443
+
 REACT_APP_COLOR_PRIMARY = '#FFC107'
 REACT_APP_COLOR_SECONDARY = '#0F2C3B'
+REACT_APP_REST_API_URL=https://thorge3back.onrender.com/api/
+REACT_APP_WEBSOCKET_URL = wss://thorge3back.onrender.com
