--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vis.gl/react-google-maps": "^1.4.2",
     "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "qrcode-decoder": "^0.3.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
@@ -61,6 +62,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@types/jest": "^29.5.14",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/ws": "^8.5.13",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
